<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:screenOrientation="portrait">


    <TextView
        android:id="@+id/ingrese"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text=""
        android:textSize="50sp"
        android:textAlignment="center"
        android:layout_marginTop="100dp"
        android:textColor="@color/black">
    </TextView>


    <TextView
        android:id="@+id/textoLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/ingrese"
        app:layout_constraintTop_toBottomOf="@id/ingrese"
        android:text="@string/login"
        android:textSize="50sp"
        android:textAlignment="center"
        android:textColor="@color/black">
    </TextView>

    <View
        android:id="@+id/barra"
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textoLogin"
        android:background="@color/grey">
    </View>

    <ImageView
        android:id="@+id/imagenLogin"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barra"
        android:src="@drawable/_iconousuario"
        android:layout_marginTop="5dp">
    </ImageView>
    <TextView
        android:id="@+id/textoLoginEmail"
        android:layout_width="20mm"
        android:layout_height="50dp"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/iemail"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/imagenLogin"
        android:layout_marginLeft="3dp">
    </TextView>
    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="40mm"
        android:layout_height="50dp"
        app:layout_constraintStart_toEndOf="@+id/textoLoginEmail"
        app:layout_constraintTop_toBottomOf="@id/imagenLogin"
        android:inputType="textEmailAddress">
    </EditText>
    <TextView
        android:id="@+id/textoLoginUser"
        android:layout_width="20mm"
        android:layout_height="50dp"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textoLoginEmail"
        android:text="@string/user"
        android:textColor="@color/black"
        android:layout_marginLeft="3dp">
    </TextView>
    <EditText
        android:id="@+id/inputUser"
        android:layout_width="40mm"
        android:layout_height="50dp"
        app:layout_constraintStart_toEndOf="@+id/textoLoginUser"
        app:layout_constraintTop_toBottomOf="@id/inputEmail"
        android:inputType="text">
    </EditText>
    <TextView
        android:id="@+id/textoLoginPassword"
        android:layout_width="20mm"
        android:layout_height="50dp"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textoLoginUser"
        android:text="@string/contrasenia"
        android:textColor="@color/black"
        android:layout_marginLeft="3dp">>
    </TextView>
    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="40mm"
        android:layout_height="50dp"
        app:layout_constraintStart_toEndOf="@+id/textoLoginPassword"
        app:layout_constraintTop_toBottomOf="@id/inputUser"
        android:inputType="textPassword">
    </EditText>


    <Button
        android:id="@+id/textoLoginOlvidoPassword"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textoLoginPassword"
        android:text="@string/olvido_su_contrase_a"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:layout_marginLeft="3dp"
        android:background="@android:color/transparent"
        android:layout_marginTop="10dp">
    </Button>

    <ImageView
        android:id="@+id/imagenAyuda"
        android:layout_width="50dp"
        android:layout_height="55dp"
        app:layout_constraintStart_toEndOf="@id/textoLoginOlvidoPassword"
        app:layout_constraintTop_toBottomOf="@id/textoLoginPassword"
        android:src="@drawable/interrogacion"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp">
    </ImageView>

    <Button
        android:id="@+id/botonIniciarSesion"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textoLoginOlvidoPassword"
        android:text="@string/iniciar_sesion"
        android:textAlignment="center"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">
    </Button>

    <Button
        android:id="@+id/botonRegistrarse"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/botonIniciarSesion"
        android:text="@string/registrarse"
        android:background="@color/black"
        android:textAlignment="center"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp">
    </Button>

    <ImageView
        android:id="@+id/botonVolver"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"
       android:src="@drawable/regreso"
        android:layout_marginTop="3dp">
    </ImageView>
</androidx.constraintlayout.widget.ConstraintLayout>